consultando locais no banco
